[gd_scene load_steps=8 format=2]

[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Black_Related/Assets/GUIAssets/Black_SynInteractableIcon.png" type="Texture" id=2]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Black_Related/Assets/NovaCountForActivationPanel/Black_NovaCountForActivationPanel_Fill.png" type="Texture" id=4]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Black_Related/Assets/NovaCountForActivationPanel/Black_NovaCountForActivationPanel_TopBottomBorder.png" type="Texture" id=5]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Black_Related/GUI/SynInteractable/Black_SynInteracableIcon.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 3 )

[node name="Black_SynInteracableIcon" instance=ExtResource( 1 )]
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 2 )
script = ExtResource( 6 )

[node name="NovaCountForActivationPanel" type="MarginContainer" parent="." index="0"]
margin_left = 6.0
margin_top = 12.0
margin_right = 36.0
margin_bottom = 32.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NovaCountForActivationPanel" index="0"]
margin_right = 30.0
margin_bottom = 20.0
mouse_filter = 2
custom_constants/separation = 0

[node name="TopBottomBorder" type="TextureRect" parent="NovaCountForActivationPanel/VBoxContainer" index="0"]
margin_right = 30.0
margin_bottom = 2.0
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 2

[node name="MiddleContainer" type="MarginContainer" parent="NovaCountForActivationPanel/VBoxContainer" index="1"]
margin_top = 2.0
margin_right = 30.0
margin_bottom = 17.0
mouse_filter = 2

[node name="FillBackground" type="TextureRect" parent="NovaCountForActivationPanel/VBoxContainer/MiddleContainer" index="0"]
margin_right = 30.0
margin_bottom = 15.0
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 2

[node name="ContentMarginer" type="MarginContainer" parent="NovaCountForActivationPanel/VBoxContainer/MiddleContainer" index="1"]
margin_right = 30.0
margin_bottom = 15.0
mouse_filter = 2
custom_constants/margin_right = 0
custom_constants/margin_top = 2
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="NovaCountLabel" type="Label" parent="NovaCountForActivationPanel/VBoxContainer/MiddleContainer/ContentMarginer" index="0"]
margin_top = 2.0
margin_right = 30.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "25"
align = 1

[node name="TopBottomBorder2" type="TextureRect" parent="NovaCountForActivationPanel/VBoxContainer" index="2"]
margin_top = 17.0
margin_right = 30.0
margin_bottom = 19.0
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 2
[connection signal="mouse_entered" from="NovaCountForActivationPanel" to="." method="_on_NovaCountForActivationPanel_mouse_entered"]
[connection signal="mouse_exited" from="NovaCountForActivationPanel" to="." method="_on_NovaCountForActivationPanel_mouse_exited"]
